--- a/CodingExercise/SalesTaxes/SalesTaxesMVC/Views/Categories/Index.cshtml
+++ b/CodingExercise/SalesTaxes/SalesTaxesMVC/Views/Categories/Index.cshtml
@@ -4,11 +4,8 @@
     ViewBag.Title = "Index";
 }
 
-<h2>Index</h2>
+<h2>Categories</h2>
 
-<p>
-    @Html.ActionLink("Create New", "Create")
-</p>
 <table class="table">
     <tr>
         <th>
@@ -36,8 +33,7 @@
         </td>
         <td>
             @Html.ActionLink("Edit", "Edit", new { id=item.CategoryId }) |
-            @Html.ActionLink("Details", "Details", new { id=item.CategoryId }) |
-            @Html.ActionLink("Delete", "Delete", new { id=item.CategoryId })
+            @Html.ActionLink("Details", "Details", new { id=item.CategoryId })
         </td>
     </tr>
 }
