--- a/CodingExercise/SalesTaxes/SalesTaxesMVC/Views/Items/Delete.cshtml
+++ b/CodingExercise/SalesTaxes/SalesTaxesMVC/Views/Items/Delete.cshtml
@@ -12,11 +12,11 @@
     <hr />
     <dl class="dl-horizontal">
         <dt>
-            @Html.DisplayNameFor(model => model.Category.CategoryId)
+            @Html.DisplayNameFor(model => model.Category.Category)
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.Category.CategoryId)
+            @Html.DisplayFor(model => model.Category.Category)
         </dd>
 
         <dt>
