--- a/CodingExercise/SalesTaxes/SalesTaxesMVC/Views/Categories/Edit.cshtml
+++ b/CodingExercise/SalesTaxes/SalesTaxesMVC/Views/Categories/Edit.cshtml
@@ -20,8 +20,7 @@
         <div class="form-group">
             @Html.LabelFor(model => model.Category, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EnumDropDownListFor(model => model.Category, htmlAttributes: new { @class = "form-control" })
-                @Html.ValidationMessageFor(model => model.Category, "", new { @class = "text-danger" })
+                @Html.DisplayFor(model => model.Category)
             </div>
         </div>
 
