--- a/CodingExercise/SalesTaxes/SalesTaxesMVC/Views/Items/Create.cshtml
+++ b/CodingExercise/SalesTaxes/SalesTaxesMVC/Views/Items/Create.cshtml
@@ -42,10 +42,10 @@
         </div>
 
         <div class="form-group">
-            @Html.LabelFor(model => model.CategoryId, "CategoryId", htmlAttributes: new { @class = "control-label col-md-2" })
+            @Html.LabelFor(model => model.Category.Category, "Category", htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.DropDownList("CategoryId", null, htmlAttributes: new { @class = "form-control" })
-                @Html.ValidationMessageFor(model => model.CategoryId, "", new { @class = "text-danger" })
+                @Html.DropDownList("CategoryList", null, htmlAttributes: new { @class = "form-control" })
+                @Html.ValidationMessageFor(model => model.Category.Category, "", new { @class = "text-danger" })
             </div>
         </div>
 
